--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cookie-signature": "^1.2.2",
     "debug": "^4.4.1",
     "depd": "^2.0.0",
+    "dotenv": "^17.2.0",
     "dunder-proto": "^1.0.1",
     "ee-first": "^1.1.1",
     "encodeurl": "^2.0.0",
@@ -60,6 +61,7 @@
     "mime-types": "^3.0.1",
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
+    "mssql": "^11.0.1",
     "negotiator": "^1.0.0",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.13.4",
