--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "accepts": "^2.0.0",
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^3.0.2",
     "binary-extensions": "^2.3.0",
     "body-parser": "^2.2.0",
     "brace-expansion": "^1.1.12",
@@ -90,6 +91,8 @@
     "simple-update-notifier": "^2.0.0",
     "statuses": "^2.0.2",
     "supports-color": "^5.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "to-regex-range": "^5.0.1",
     "toidentifier": "^1.0.1",
     "touch": "^3.1.1",
@@ -100,7 +103,7 @@
     "wrappy": "^1.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
@@ -109,6 +112,8 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^30.0.4",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.3"
   }
 }
