--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "call-bind-apply-helpers": "^1.0.2",
     "call-bound": "^1.0.4",
     "chokidar": "^3.6.0",
+    "cloudinary": "^2.7.0",
     "concat-map": "^0.0.1",
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
@@ -64,6 +65,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
     "mssql": "^11.0.1",
+    "multer": "^2.0.1",
     "negotiator": "^1.0.0",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.13.4",
@@ -91,6 +93,7 @@
     "side-channel-weakmap": "^1.0.2",
     "simple-update-notifier": "^2.0.0",
     "statuses": "^2.0.2",
+    "streamifier": "^0.1.1",
     "supports-color": "^5.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
