--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "accepts": "^2.0.0",
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "binary-extensions": "^2.3.0",
     "body-parser": "^2.2.0",
